# bevy_turn-based_combat

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  bevy_turn-based_combat.d.ts  bevy_turn-based_combat.js  bevy_turn-based_combat_bg.wasm.d.ts  index.html
src/: constants.rs  debug.rs  main.rs  spritesheet.rs
src/characters/: mod.rs
src/characters/npcs/: ai.rs  mod.rs
src/combat/: alteration_list.rs  alterations.rs  buffs.rs  mod.rs  phases.rs  skill_list.rs  skills.rs  stats.rs  stuff.rs  tactical_position.rs  weapons_list.rs
src/fx/: mod.rs
src/npc/: mod.rs
src/ui/: character_sheet.rs  combat_panel.rs  combat_system.rs  dialog_box.rs  dialog_combat.rs  dialog_panel.rs  dialog_player.rs  initiative_bar.rs  log_cave.rs  mod.rs  player_interaction.rs
