[package]
name = "bevy_turn-based_combat"
version = "0.3.0"
authors = ["Olf EPAIN aka Wabtey <wabtey@disroot.org>", "Morgan Van Amerongen <vanamerongen.morgan@gmail.com>"]
edition = "2021"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.9",  default-features = false, features = ["bevy_asset", "bevy_scene", "bevy_winit", "render", "x11", "png", "wayland", "dynamic"] }
bevy_ecs = "0.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = "0.9"
bevy_ecs = "0.9"
wasm-bindgen = "0.2"

[dependencies]
bevy_tweening = "0.6"

image = "0.23"
rand = "0.8.5"

# ----------- Debug -----------
bevy-inspector-egui = "0.15"
log = "0.4.17"

# Optimize the dependencies
[profile.dev.package."*"]
opt-level = 3

# Don't optimize the code
[profile.dev]
opt-level = 1