[package]
name = "bevy_turn-based_combat"
version = "0.4.0"
authors = ["Olf EPAIN <wabtey@disroot.org>", "Morgan Van Amerongen <vanamerongen.morgan@gmail.com>"]
repository = "https://github.com/Fabinistere/bevy_turn-based_combat"
license = "MIT OR Apache-2.0"
edition = "2021"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# default-features = false, features = ["bevy_asset", "bevy_scene", "bevy_winit", "render", "x11", "png", "wayland", "dynamic"]
bevy = { version = "0.10",  features = ["dynamic_linking"] }
bevy_ecs = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = "0.10"
bevy_ecs = "0.10"
wasm-bindgen = "0.2"

[dependencies]
bevy_tweening = "0.7"
bevy_reflect = "0.10"

image = "0.23"
rand = "0.8.5"

# Iterate thought Enum
strum = { version = "0.24", features = ["derive"] }

# ----------- Debug -----------
bevy-inspector-egui = "0.18"
log = "0.4.17"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
